# QBO_V1

./: README.md
AUDIO/QBO_Neo_talk/: CMakeLists.txt  README.md  readme
AUDIO/QBO_Neo_talk/launch/: QBO_Neo_talk.launch
AUDIO/QBO_Neo_talk/params/cerevoice/: CereVoiceLaurent.lic.7z  pwd.txt  temp.xml  txt2wav
AUDIO/QBO_Neo_talk/src/: QBO_Neo_.py  neo_talk.py
BACKUP/INDIGO/qbo_ai/: NEO.brn
BACKUP/INDIGO/qbo_camera/: CMakeLists.txt
BACKUP/rivescript-python-master/: example.py  example3.py  guide.txt
BACKUP/rivescript-python-master/eg/neo/: affirmations.rive  as-tu-peux-tu.rive  connaissances.rive  et-si.rive  neo.rive  neo_Macro.rive  peux-tu-es-tu.rive  qui-quoi-comment.rive
BACKUP/rivescript-python-master/eg/neo (copie)/: affirmations.rive  begin.rive  connaissances.rive  et-si.rive  neo.rive  peux-tu-es-tu.rive  qui-quoi-comment.rive
FIRMWARES/ATOM_Q1_Backup/QBoard1Firm/: QBoard1Firm.ino
FIRMWARES/Q1_firmware_3.2_syl/: README.md
FIRMWARES/Q1_firmware_3.2_syl/QBoard1Firm/: ArduBot.cpp  ArduBot.h  LCDi2cW.cpp  README_FIRST.txt  motores.h  serialProtocol.cpp  serialProtocol.h
FIRMWARES/Q1_firmware_3.2_syl/backup_ok/QBoard1Firm/: ArduBot.cpp  ArduBot.h  QBoard1Firm.ino  SRF10.cpp  comands.h  serialProtocol.cpp
FIRMWARES/Q1_firmware_3.2_syl/mes modifs/QBoard1Firm/: ArduBot.cpp  ArduBot.h  LCD_Graphics.h  QBoard1Firm.ino  comands.h  motores.h  serialProtocol.cpp
FIRMWARES/Q1_firmware_3.2_syl/mes modifs/QBoard1Firm (copie 1)/: ArduBot.cpp  ArduBot.h  LCD_Graphics.h  QBoard1Firm.ino  motores.h  serialProtocol.cpp
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/: CMakeLists.txt  default.yaml  default_with_sensors_dynamixel.yaml  default_with_sensors_dynamixel.yaml~  package.xml
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/include/driver/: arduqbo_instructions.h  qboduino_driver.h
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/launch/: qbo_dynamixel_with_sensors.launch~
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/src/: controllerGUI.py
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/src/controllers/: imu_controller.cpp  srf10_controller.cpp
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/src/driver/: qboduino_driver.cpp
FIRMWARES/Q1_firmware_3.2_syl/qbo_arduqbo/src/dynamixel_sdk/src/: dxl_hal.c
FIRMWARES/QBO_firmwares/: qboard1_v1.xls  qboard2_v1.xls  qboard3_v1.xls  qboard4_v1.xls  qboard5_v1.xls
FIRMWARES/QBO_firmwares/System Volume Information/: FlameSpurt.FAM  IndexerVolumeGuid  LightningSand.CFD
FIRMWARES/QBO_firmwares/System Volume Information/EfaSIDat/: SYMEFA.DB
FIRMWARES/QBO_firmwares/mon_bin/.metadata/: version.ini
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
FIRMWARES/QBO_firmwares/mon_bin/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
FIRMWARES/QBO_firmwares/qbo_arduino-master/sketchbook/: QBoard1Firm.rar
FIRMWARES/QBO_firmwares/qbo_arduino-master/sketchbook/QBoard1Firm/: ArduBot.cpp  ArduBot.h  motores.h  serialProtocol.cpp
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/: main.c  main.h  stm32f10x_it.c
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/EWARM/.metadata/: version.ini
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/TrueSTUDIO/.metadata/: version.ini
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/TrueSTUDIO/STM3210C-EVAL/: .cproject  Debug_STM32F103ZE_FLASH.ld
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/TrueSTUDIO/STM3210C-EVAL/.metadata/: version.ini
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/TrueSTUDIO/STM3210E-EVAL/: .cproject
FIRMWARES/QBO_firmwares/qboard3_firmware-master/Project/FirmOK/TrueSTUDIO/STM3210E-EVAL/User/: stm32f10x.h
FIRMWARES/QBO_firmwares/qboard3_firmware-master/um0462/: license.txt  readme.txt  version.txt
FIRMWARES/qboard1_corpora_mod_ok/QBoard1Firm/: ArduBot.cpp  ArduBot.h  IRbeanSerial.cpp  QBoard1Firm.ino  serialProtocol.cpp
GAMES/neo_play_games/: CMakeLists.txt  package.xml  readme.md
GAMES/neo_play_games/launch/: ball_colors.launch  chifumi_by_artags.launch
GAMES/neo_play_games/msg/: ball_color.msg
GAMES/neo_play_games/src/: ball_color_publisher.py  chifumi_AI (copy).py  chifumi_AI.py  chifumi_game.py  color_balls_game.py  color_game_smach.py  ros_cam_view.py
NAVIGATION/neo_docking_with_tag/: CMakeLists.txt  package.xml
NAVIGATION/neo_docking_with_tag/launch/: docking.launch  test.launch
NAVIGATION/neo_docking_with_tag/nodes/: automatic_parking_vision.py  docking.py  rot.py
NAVIGATION/neo_navigation/: CMakeLists.txt  README.MD  package.xml
NAVIGATION/neo_navigation/launch/: neo_amcl_with_ekf.launch  neo_amcl_with_robot_pose_ekf.launch  neo_rtabmap.launch  test_movebase.launch
NAVIGATION/neo_navigation/launch/includes/: D435_amcl.launch.xml  move_base.launch.xml
NAVIGATION/neo_navigation/maps/: 2dmap_from_rtabmap.yaml.pgm  2dmap_from_rtabmap.yaml.yaml  maison.pgm  maison.yaml  maison1mars2019.pgm  maison1mars2019.yaml  maison2.pgm  maison2.yaml  maison_de_neo_04022019.yaml.yaml  newmap_neo.yaml.pgm  newmap_neo.yaml.yaml
NAVIGATION/neo_navigation/nodes/: RGB2HSV_converter.py  calibrate_angular.py  calibrate_linear.py
NAVIGATION/neo_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
NAVIGATION/neo_navigation/src/: LeavingDock.py  localisations_amcl_boncourt_300  patrouille.py  qbo_amcl.py  qbo_amcl2.py  qbo_navigation.py
QBO_Neo_talk/: package.xml  readme
(+23 files in other folders)
