<?xml version="1.0"?>
<package>
  <name>QBO_Neo_navigation</name>
  <version>2.0.0</version>
  <description>QBO_Neo_navigation package</description>
  
  <maintainer email="vincent.foucault12@gmail.com">for_neo</maintainer>

  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
     <run_depend>message_runtime</run_depend> 
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>move_base</build_depend>
  
  <run_depend>move_base</run_depend>
    
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>clear_costmap_recovery</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>rotate_recovery</build_depend>
  <build_depend>voxel_grid</build_depend>
  
  <run_depend>base_local_planner</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>rotate_recovery</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>voxel_grid</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
