<?xml version="1.0"?>
<package>
  <name>qbo_arduqbo</name>
  <version>12.1.1</version>
  <description>The qbo_arduqbo package</description>

  <maintainer email="sylvain.zwolinski@konexinc.com">jarvis</maintainer>

  <license>BSD</license>

  <url type="website">http://konexinc.com</url>

  <author email="thomas.peyruse@konexinc.com">Thomas</author> -->

  <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
  
    <build_depend>message_generation</build_depend> 
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
  
    <run_depend>message_runtime</run_depend> 
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
